--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -7,10 +7,13 @@
 		    	<span class="icon-bar"></span>
 		    	<span class="icon-bar"></span>
 		    </button>
-	      	<a class="navbar-brand" href="{{pathFor 'postsList'}}">{{pageTitle}}</a>
+	      	<a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="navigation">
-	    	<ul class="nav navbar-nav navbar-right">
+	    	<ul class="nav navbar-nav">
+	     		<li><a href="((pathFor 'postSubmit'}}">Submit Post</a></li>
+	     	</ul>
+	     	<ul class="nav navbar-nav navbar-right">
 	     		{{> loginButtons}}
 	     	</ul>
 	    </div>
